# kari

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  TECHNICAL_SPEC.md  docker-compose.yml  go.mod  go.sum  package.json  playwright.config.ts
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  generate-frontend-lockfile.yml  generate-proto.yml  release.yml  verify.yml
agent/: Cargo.toml  Dockerfile.dev  build.rs
agent/src/: config.rs  main.rs  server.rs
agent/src/sys/: build.rs  cleanup.rs  firewall.rs  git.rs  jail.rs  logs.rs  mod.rs  proxy.rs  scheduler.rs  secrets.rs  ssl.rs  systemd.rs  traits.rs
api/: .air.toml
api/cmd/audit/: check-posture.go
api/cmd/healthcheck/: main.go
api/cmd/kari-api/: main.go
api/configs/: security_strict.json
api/internal/adapters/: acme_provider.go  apache_adapter.go  nginx_manager.go
api/internal/config/: config.go  config_test.go
api/internal/db/: profile_repo.go
api/internal/handlers/: auth_handler.go  profile_handler.go
api/internal/telemetry/: hub.go
api/internal/worker/: deployment_worker.go
api/internal/workers/: app_monitor.go  app_monitor_perf_test.go  health_prober.go  ssl_renewer.go  ssl_renewer_perf_test.go
docs/: AGENT_API.md  ARCHITECTURE.md  AUDIT_2026_02_20.md  AUDIT_2026_04_27.md  PHASE_MAP_2026-04-27.md  PROJECT_STATE_REVIEW_2026-04-24.md  PROJECT_STATE_REVIEW_2026-04-25.md  PROJECT_STATE_REVIEW_2026-04-27.md  PROVIDERS.md  QUICKSTART_LOCAL_PRODUCTION.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  app.css  hooks.server.ts  index.css
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: AuditPage.tsx  DashboardPage.tsx  DeploymentsPage.tsx  DomainsPage.tsx  LoginPage.tsx  RolesPage.tsx  SettingsPage.tsx  SystemPage.tsx
frontend_svelte_legacy/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend_svelte_legacy/src/: hooks.server.ts
frontend_verification/: verify_setup.spec.ts
playwright-report/: index.html
scripts/: bootstrap.sh  check-proto-drift.sh  dev.sh  gen-secrets.sh  install.sh  proto-gen.sh  up.sh
src/: hooks.server.ts
(+101 files in other folders)
